Adding initial API Gateway support

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,5 @@ block content
     p
       input.input-block-level(type="text", name="username", value="john")
     p
-      input.input-block-level(type="password", name="password", value="Password")
+      input.input-block-level(type="password", name="password", value="john")
     button.btn.btn-large.btn-primary(type="submit") Sign in
