Updates to get working in lambda and locally

--- a/views/bought.jade
+++ b/views/bought.jade
@@ -7,5 +7,5 @@ block content
 
   p
       button.btn.btn-large.btn-primary
-          a(href="/tickets/")
+          a(href="#{stage}/tickets/")
               span Return
