--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,15 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    base(href="/prod/")
+    style(type='text/css').
+      body {
+        padding: 50px;
+        font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+      }
+
+      a {
+        color: #00B7FF;
+      }
+
   body
     block content
