--- a/views/tickets.jade
+++ b/views/tickets.jade
@@ -12,7 +12,7 @@ block content
 
 
   button.btn.btn-large.btn-primary
-    a(href="/tickets/buy/")
+    a(href="#{stage}/tickets/buy/")
       span Buy Tickets!
 
 
