--- a/views/buy.jade
+++ b/views/buy.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h2 Buy Tickets
-  form.form-signin(action="/tickets/buy/confirm", method="get")
+  form.form-signin(action="#{stage}/tickets/buy/confirm", method="get")
       p
           label Number of tickets:
              input.input-block-level(type="text", name="number", value="1", size="3")
